--- a/assets/ticket_sidebar.html
+++ b/assets/ticket_sidebar.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <!-- http://garden.zendesk.com -->
+  <!-- https://d3v-tagado9977.zendesk.com -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@zendeskgarden/css-bedrock@7.0" type="text/css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@zendeskgarden/css-buttons" type="text/css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@zendeskgarden/css-forms" type="text/css">
@@ -61,7 +61,7 @@
               data: JSON.stringify({
                 "user_id": requesterId,
                 "type": type.value,
-                "source": "notely",
+                "source": "Tagado",
                 "description": description,
                 "properties": {
                   "author": author,
