add redirect to tagado website

--- a/assets/index.html
+++ b/assets/index.html
@@ -30,6 +30,8 @@
     <div class="u-mb">
       <div class="row">
         <div class="col-6">
+		<form action="https://app.tagado.com/integrations"><input type="submit" value="Zendesk Authorization" /></form>
+		<!--
           <div class="c-txt u-mb">
             <button id="btnConnect" class="c-btn c-btn--primary">Zendesk Authorization</button>
           </div>
@@ -63,9 +65,11 @@
               <button id="submit" class="c-btn c-btn--primary" style="float: right">Save</button>
             </div>
           </div>
+		  -->
         </div>
       </div>
     </div>
   </div>
 </body>
 </html>
+
